--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 *.class
 test/target/classes/META-INF/MANIFEST.MF
 /test/target/classes
+test/src/.DS_Store
+test/src/main/.DS_Store
+test/src/main/java/.DS_Store
+test/.project
+.project
+test/.DS_Store
+test/src/test/.DS_Store
+.DS_Store
+test/.classpath
